# rhythinl

./: .gitattributes  .gitignore  .mailmap  CMakeCache.txt  CMakeLists.txt  CONFIGURE_MINGW.md  Dockerfile  LICENSE  Makefile  README.md  SUPPORT.md  a.out  ast.h  chunk.h  cmake_install.cmake  gencmake.py  lex_types.h  log.h  log_errors.cpp  main  make.bat  make.sh  object.h  r_inter.cpp  r_lex.cpp  r_lex.h  r_parser.cpp  r_parser.h  rexcept.h  rhythin  rhythin.cpp  rythin  rythin.cpp  semantic  t_tokens.cpp  t_tokens.h  utils.cpp  utils.h  val_types.h  values.h  (+1 more)
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md
.github/workflows/: cmake-multi-platform.yml
backend/: README.MD
extensions/VIM/: LICENSE  README.md  build.sh
extensions/VIM/ftdetect/: rhythin.vim
extensions/VIM/ftplugin/: rhythin.vim
extensions/VIM/syntax/: rhythin.vim
extensions/VSCode/: CHANGELOG.md  README.md  build.sh  language-configuration.json  package.json  rhythin-0.0.0-1.vsix
extensions/VSCode/syntaxes/: .ry.tmLanguage.json
licenses/obsoleted/: LICENSE
simple_vm/: vm.cpp
src/: README.md  log_errors.cc  log_errors.cpp  r_inter.cc  r_inter.cpp  r_lex.cc  r_lex.cpp  r_parser.cc  r_parser.cpp  rhythin.cc  rhythin.cpp  semantic_v.cc  semantic_visit.cc  t_tokens.cc  t_tokens.cpp
src/includes/: ast.h  ast.hpp  ast_visit.h  ast_visit.hpp  chunk.h  chunk.hpp  lex_types.h  lex_types.hpp  log.h  log.hpp  object.h  r_inst.h  r_inst.hpp  r_inter.h  r_inter.hpp  r_lex.hpp  r_opcodes.h  r_opcodes.hpp  r_parser.h  r_parser.hpp  rexcept.hpp  semantic_visitor.h  semantic_visitor.hpp  t_tokens.hpp  val_types.hpp
src/lexer/: lex_types.hpp  r_lex.cc  r_lex.hpp
src/parser/: .gitignore  Makefile  parser_test.cc  r_parser.cc  r_parser.hpp
src/tokens/: t_tokens.cc  t_tokens.hpp
test/: annotations.txt  func_def.ry  func_definition.ry  print.ry  rhythin_code_introduction.ry  rythin_code_introduction.ry  soma_divisao_multiplicacao.ry  soma_test.ry
tests/: var_dec.ry
